[bug/101]-JWTFilter-NPE